projects/vb6parse/snapshots/parsers/cst/file_operations/close/close_preserves_whitespace.snap
---
source: projects/vb6parse/tests/file_operations/close.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: CloseStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: CloseKeyword
                  text: Close
                - kind: Whitespace
                  text: "   "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Octothorpe
                              text: "#"
                            - kind: IntegerLiteral
                              text: "1"
                    - kind: Whitespace
                      text: "  "
                    - kind: Comma
                      text: ","
                    - kind: Whitespace
                      text: "  "
                    - kind: Argument
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Octothorpe
                              text: "#"
                            - kind: IntegerLiteral
                              text: "2"
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
